# SMCPy

./: .__init__.py  .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  mcmc_sampler.py  pyproject.toml  requirements.txt  requirements_optional.txt  setup.cfg  setup.py
.github/workflows/: pypi.yml  tests.yml
docs/: Makefile  conf.py  example.rst  index.rst  introduction.rst  source_code.rst  spring_mass_example.rst
examples/: example_smc.py  helper_functions.py  test.hdf5
examples/checkpointing/: run_example.py
examples/linear_example/: run_example_max_steps.py  run_readme.py
examples/mpi_example/: model.py  run_adaptive_example.py  run_example.py  run_fixed_example.py
particles/: Particle.py  ParticleChain.py  particle_chain.py  particle_set.py
smc/: SMCSampler.py
smcpy/: .__init__py  __init__.py  bloom_smc_sampler.py  hierarch_log_likelihoods.py  log_likelihoods.py  paths.py  priors.py  proposals.py  resample_strategies.py  resampler_rngs.py  sampler_base.py  samplers.py  smc_sampler.py  smc_sampler_adaptive.py
smcpy/hdf5/: hdf5_storage.py
temp/: temp_test.py
tests/: .run_tests.sh  _conftest.py  autosaver.hdf5  conftest.py  hdf5_info.py  noisy_data.txt  particle_chain_tester.py  particle_tester.py  restart.hdf5  smc_tester.py  spring_mass_model.py  test_base_model.py  test_hdf5.py  test_particle_chain.py  test_particle_distributor.py  test_particle_initializer.py  test_particle_mutator.py  test_particle_updater.py  test_particles.py  test_single_rank_comm.py  test_smc_propagator.py  test_smc_sampler.py  test_smc_step.py  test_smc_step_list.py
(+166 files in other folders)
